assets/css/style.css
:root {
  --primary-color: #dbc57d;
  --secondary-color: #658c67;
  --tertiary-color: #11274a;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  color: var(--tertiary-color);
  font-family: Helvetica, Arial, sans-serif;
}

/* HEADER / NAV BAR STYLES START */
header {
  padding: 20px 35px;
  background-color: var(--tertiary-color);
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  position: sticky;
  position: -webkit-sticky;
  top: 0;
  background-image: url("../images/hero-bg.jpg");
  background-size: cover;
  background-attachment: fixed;
  background-position: 80%;
  z-index: 9999;
}

header h1 {
  font-weight: bold;
  margin: 0;
  font-size: 36px;
  color: var(--primary-color);
  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

header a {
  text-decoration: none;
  color: var(--primary-color);
}

header nav {
  margin: 7px 0;
}

header nav ul {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  list-style: none;
}

header nav ul li a {
  padding: 5px 15px;
  font-weight: lighter;
  font-size: 1.55vw;
  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

header nav ul li a:hover {
  background: var(--primary-color);
  color: var(--secondary-color);
  border-radius: 15px;
  text-shadow: none;
}
/* HEADER / NAVBAR STYLES END */

/* FOOTER STYLES START */
footer {
  background: var(--primary-color);
  padding: 5px 35px;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  width: 100%;
}

footer h2 {
  color: var(--secondary-color);
  font-size: 30px;
  margin: 0;
  justify-content: right;
}

footer div {
  line-height: 1.5;
  text-align: right;
}

footer a {
  color: var(--secondary-color);
}
/* END FOOTER STYLES */

/* STYLE ALL SECTION TAGS */
section {
  padding: 60px;
}

/* HERO STYLES START */
.hero {
  background-image: url('../images/hero-bg.jpg');
  background-size: cover;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  align-items: flex-start;
  background-attachment: fixed;
  background-position: 80%;
}

/* Made this into a flexbox with img and verbiage as children */
.hero-promo {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  text-align: right;
  margin: 0.5%;
  color: #fff;
  font-size: 18px;
  line-height: 1.2;
  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}
/* Round edges of photo */
#hero-photo {
  border-radius: 25px;
}

/* Set color and size of hero title */
.hero-promo h2 {
  font-style: italic;
  font-size: 55px;
  color: var(--primary-color);
}

/* Sized the words on the hero */
#hero-verbiage {
  flex-basis: 50%;
}

/* SECTION TITLE STYLES START */
.section-title {
  font-size: 48px;
  border-bottom: 3px solid;
  color: var(--secondary-color);
  padding-bottom: 20px;
  text-align: center;
  margin: 0 auto 35px auto;
  width: 50%;
}

.primary-border {
  border-color: var(--primary-color);
}

.secondary-border {
  border-color: var(--tertiary-color);
}
/* SECTION TITLE STYLES END */

/* ABOUT ME STYLES */
#about-me p {
  line-height: 1.7;
  color: var(--tertiary-color);
  width: 80%;
  margin: 0 auto;
  font-size: 20px;
  text-align: center;
}
/* ABOUT ME STYLES END */

/* MY PROJECTS */
.projects {
  width: 100%;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

.project {
  margin: 20px;
  flex: 1;
  background: var(--secondary-color);
  color: var(--primary-color);
}

.project img {
  width: 100%;
}

.project-bio {
  padding: 25px;
  line-height: 1.3;
}

.project-bio h3 {
  font-size: 28px;
}

.project-bio h4 {
  font-weight: lighter;
  font-size: 22px;
  margin-bottom: 15px;
}

.project-bio p {
  font-size: 17px;
}

/* Adding grow on hover functionality */
.project:hover {
  -ms-transform: scale(1.1); /* IE 9 */
  -webkit-transform: scale(1.1); /* Safari 3-8 */
  transform: scale(1.1); 
}
/* My Projects STYLES END */

/* REACH OUT STYLES START */
.contact {
  background: var(--secondary-color);
}

.contact h2 {
  color: var(--primary-color);
}

.contact-info {
  display: flex;
  justify-content: center;
  color: white;
  flex-wrap: wrap;
}

.contact-info > * {
  margin: 15px;
}

.contact-info h3 {
  color: var(--primary-color);
  font-size: 32px;
  justify-content: flex-end;
}

.contact-info p, .contact-info address {
  margin: 20px 0;
  line-height: 1.5;
  font-size: 16px;
  font-style: normal;
}
/* REACH OUT STYLES END */

/* UTILITIES */
.text-left {
  text-align: left;
}

.text-right {
  text-align: right;
}

.flex-row {
  display: flex;
}

/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
@media screen and (max-width: 980px) {
  header {
    padding-bottom: 0;
    justify-content: center;
    position: relative;
  }

  header h1 {
    width: 100%;
    text-align: center;
  }

  header nav ul {
    margin-top: 20px;
    width: 100%;
    justify-content: center;
  }

  header nav ul li a {
    font-size: 20px;
  }

  footer h2, footer div {
    text-align: center;
    width: 100%;
  }

  .hero-promo {
    width: 100%;
  }
  
  .hero-promo {
    text-align: center;
  }

  .section-title {
    width: 80%;
  }
  
  .project {
    flex: 0 70%;
  }
  
}

/* MEDIA QUERY FOR TABLETS AND SMALLER */
@media screen and (max-width: 768px) {
  section {
    padding: 30px 15px;
  }

  .project-bio h3, .project-bio h4 {
    display: block;
  }
}

/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
@media screen and (max-width: 575px) {

  .section-title {
    width: 95%;
  }

  #about-me p {
    width: 100%;
  }

  .project {
    flex: 0 100%;
  }

  .contact-info {
    text-align: center;
  }

  .contact-info > * {
    flex: 0 100%;
  }

}

